apps/guacamole/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: guacamole
spec:
  parentRefs:
  - name: http
    namespace: nginx-gateway
  hostnames:
  - "rats.nabasny.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /guacamole
    backendRefs:
    - name: guacamole
      port: 80
